eliminate usage of Guava